--- a/src/ejs/parts/_btn-yellow.ejs
+++ b/src/ejs/parts/_btn-yellow.ejs
@@ -1,1 +1,1 @@
-<a href="" class="btn btn--yellow"><%= text %></a><!-- /.btn -->
+<a href="<%= link %>" class="btn btn--yellow"><%= text %></a><!-- /.btn -->
