--- a/src/ejs/parts/_view-more.ejs
+++ b/src/ejs/parts/_view-more.ejs
@@ -1,3 +1,3 @@
-<a href="" class="view-more">
-  <p href="" class="view-more__text"><%= text %></p><!-- /.view-more__text -->
+<a href="<%= link %>" class="view-more">
+  <p class="view-more__text"><%= text %></p><!-- /.view-more__text -->
 </a><!-- /.view-more -->
