--- a/src/sass/module/_inner.scss
+++ b/src/sass/module/_inner.scss
@@ -2,6 +2,7 @@
 
 .inner {
   width: 100%;
+  max-width: rem(580);
   padding-right: $padding-sp;
   padding-left: $padding-sp;
   margin-right: auto;
