--- a/src/ejs/parts/_btn-arrow.ejs
+++ b/src/ejs/parts/_btn-arrow.ejs
@@ -1,1 +1,1 @@
-<a href="" class="btn btn--arrow"><%= text %></a><!-- /.btn -->
+<a href="<%= link %>" class="btn btn--arrow"><%= text %></a><!-- /.btn -->
