--- a/src/ejs/parts/_btn-blue.ejs
+++ b/src/ejs/parts/_btn-blue.ejs
@@ -1,1 +1,1 @@
-<a href="" class="btn btn--blue"><%= text %></a><!-- /.btn -->
+<a href="<%= link %>" class="btn btn--blue"><%= text %></a><!-- /.btn -->
