--- a/src/sass/module/_btn.scss
+++ b/src/sass/module/_btn.scss
@@ -9,6 +9,9 @@
  border: 1px solid $color-main-dark2;
  transition: all .3s;
  position: relative;
+ overflow: hidden;
+ z-index: 1;
+ box-sizing: border-box;
 }
 
 .btn:before {
@@ -25,6 +28,7 @@
 }
 .btn:hover {
  color: $white;
+ opacity: 1;
 
 }
 .btn:hover:before {
@@ -36,22 +40,15 @@
 .btn.btn--blue {
   color: $white;
   background-color: $color-main-dark2;
-}
-.btn.btn--blue:before {
-  content: '';
-  position: absolute;
-  top: 0;
-  left: -100%;
-  width: 100%;
-  height: 100%;
-  z-index: -1;
-  background-color: $color-main-dark;
-  transition: all 300ms linear;
  
 }
-.btn.btn--blue:hover:before {
-  left: 0;
+.btn.btn--blue:hover {
+  color: $color-accent;
 }
+
+
+
+
 
 
 .btn.btn--arrow {
@@ -80,8 +77,15 @@
 .btn.btn--yellow {
   color: $color-accent;
   background: transparent;
-  border: 1px solid $color-accent;
+  border: 2px solid $color-accent;
   position: relative;
+  font-size: rem(16);
+  
+  @include mq(tab) {
+    border: 3px solid $color-accent;
+    font-size: rem(24);
+    
+  }
 }
 .btn.btn--yellow::after {
   content: "";
@@ -95,10 +99,12 @@
   right: rem(20);
   z-index: 10;
   transition:  all .3s;
+ 
 }
 
 .btn.btn--yellow:before {
   background-color: $color-accent;
+ 
  
 }
 
