--- a/src/sass/module/_drawer-menu.scss
+++ b/src/sass/module/_drawer-menu.scss
@@ -1,11 +1,11 @@
 @use "global" as *;
 
-
 .drawer-menu {
   position: fixed;
   z-index: 4;
   width: 100%;
-  max-width: rem(520);
+  max-width: rem(375);
+  padding: 0 rem(40);
   height: 100vh;
   top: rem(60);
   right: 0;
@@ -31,11 +31,12 @@
 
 .drawer-menu__items {
   margin-top: rem(40);
+  text-align: center;
 
 }
 
 .drawer-menu__item {
-
+  
   
 }
 
@@ -48,4 +49,23 @@
  padding: rem(20) 0;
  text-align: center;
 
+}
+
+.drawer-menu__download {
+  margin-top: rem(23);
+}
+
+.drawer-menu__download a,
+.drawer-menu__contact a{
+  display: inline-block;
+  font-size: rem(16);
+  padding: rem(23) 0;
+  width: 100%;
+  border: 1px solid $white;
+}
+
+.drawer-menu__contact {
+  background: $white;
+  color: $color-main-dark2;
+  margin-top: rem(32);
 }
