--- a/src/sass/module/_header-menu.scss
+++ b/src/sass/module/_header-menu.scss
@@ -17,12 +17,23 @@
 
 .header-menu__item {
 height: inherit;
+position: relative;
 
 }
 
-.header-menu__item + .header-menu__item {
-margin-left: rem(30);
+.header-menu__item:not(:first-child)::before {
+  content: "";
+  display: block;
+  width: rem(1);
+  height: rem(20);
+  height: rem(20);
+  background: $black;
+  position: absolute;
+  left: 0;
+  top: 50%;
+  transform: translateY(-50%) rotate(45deg);
 }
+
 
 .header-menu__item a {
   width: 100%;
@@ -32,5 +43,22 @@ margin-left: rem(30);
   align-items: center;
   position: relative;
   text-decoration: none;
+  font-size: rem(14);
+  padding: 0 rem(23);
+  white-space: nowrap;
+}
 
+.header-menu__download,
+.header-menu__contact {
+  width: rem(140);
+  height: rem(68);
+  
+  @include mq(lg) {
+    width: rem(176);
+ }
+}
+
+.header-menu__contact {
+ margin-left: rem(10);
+ 
 }
