--- a/src/ejs/parts/_service-block.ejs
+++ b/src/ejs/parts/_service-block.ejs
@@ -10,7 +10,7 @@
   {
     img:"./images/common/top-service2.jpg",
     alt:" ",
-    title:"<span>異文化</span><span>コミュニケーション</span>",
+    title:"<span>異文化</span><span>コミュニケーション研修</span>",
     text:"急速にグローバル化が進んでおり、ビジネスの場面に限らず様々な文化的背景を持つ者同士の交流はもはや日常的な光景となりました。<br>言語や文化が異なる相手を理解することで世界が広がり、新たなビジネスチャンスに巡り会うことは少なくありません。",
   },
   {
