--- a/src/sass/module/_header-menu.scss
+++ b/src/sass/module/_header-menu.scss
@@ -58,6 +58,10 @@ position: relative;
  }
 }
 
+.header-menu__download {
+  margin-left: rem(8);
+}
+
 .header-menu__contact {
  margin-left: rem(10);
  
