--- a/src/ejs/common/_footer-top.ejs
+++ b/src/ejs/common/_footer-top.ejs
@@ -4,7 +4,7 @@
       <%- include('../parts/_section-title--small',{title:'download',text:'資料ダウンロード'}) %>
      </div><!-- /.footer-top__title -->
      <div class="footer-top__btn">
-      <%- include('../parts/_btn-yellow',{text:'View more',link:''}) %>
+      <%- include('../parts/_btn-yellow',{text:'View more',link:'download.html'}) %>
      </div><!-- /.footer-top__btn -->
   </div><!-- /.footer-top__body -->
   <div class="footer-top__body">
@@ -12,7 +12,7 @@
       <%- include('../parts/_section-title--small',{title:'contact',text:'お問い合わせ'}) %>
      </div><!-- /.footer-top__title -->
      <div class="footer-top__btn">
-      <%- include('../parts/_btn-yellow',{text:'View more',link:' '}) %>
+      <%- include('../parts/_btn-yellow',{text:'View more',link:' contact.html '}) %>
      </div><!-- /.footer-top__btn -->
   </div><!-- /.footer-top__body -->
 </div><!-- /.download-contact -->
