--- a/src/ejs/common/_header.ejs
+++ b/src/ejs/common/_header.ejs
@@ -16,29 +16,29 @@
     <!-- ドロワーメニュー -->
      <div class=" header__drawer-menu  drawer-menu" id="js-drawer-menu" area-hidden="true">
        <ul class="drawer-menu__items">
-         <li id="js-drawer-menu__item" class="drawer-menu__item  "><a href="">トップ</a></li>
-          <li id="js-drawer-menu__item" class="drawer-menu__item"><a href="">当社について</a></li>
-          <li id="js-drawer-menu__item" class="drawer-menu__item"><a href="">サービス</a></li>
-          <li id="js-drawer-menu__item" class="drawer-menu__item"><a href="">導入事例</a></li>
-          <li id="js-drawer-menu__item" class="drawer-menu__item"><a href="">お知らせ</a></li>
-          <li id="js-drawer-menu__item" class="drawer-menu__download"><a href="">資料ダウンロード</a></li>
-          <li id="js-drawer-menu__item" class="drawer-menu__contact"><a href="">お問い合わせ</a></li>
+         <li id="js-drawer-menu__item" class="drawer-menu__item  "><a href="index.html">トップ</a></li>
+          <li id="js-drawer-menu__item" class="drawer-menu__item"><a href="about.html">当社について</a></li>
+          <li id="js-drawer-menu__item" class="drawer-menu__item"><a href="service.html">サービス</a></li>
+          <li id="js-drawer-menu__item" class="drawer-menu__item"><a href="case.html">導入事例</a></li>
+          <li id="js-drawer-menu__item" class="drawer-menu__item"><a href="news.html">お知らせ</a></li>
+          <li id="js-drawer-menu__item" class="drawer-menu__download"><a href="download.html">資料ダウンロード</a></li>
+          <li id="js-drawer-menu__item" class="drawer-menu__contact"><a href="contact.html">お問い合わせ</a></li>
         </ul>
       </div><!-- /.sheader-menu -->
   
         <!-- pcーメニュー -->
       <nav class="header__pc-menu header-menu ">
         <ul class="header-menu__items">
-          <li class="header-menu__item"><a href="">トップ</a></li><!-- /.pc-menu__item -->
-          <li class="header-menu__item"><a href="">当社について</a></li><!-- /.pc-menu__item -->
-          <li class="header-menu__item"><a href="">サービス</a></li><!-- /.pc-menu__item -->
-          <li class="header-menu__item"><a href="">導入事例</a></li><!-- /.pc-menu__item -->
-          <li class="header-menu__item"><a href="">お知らせ</a></li><!-- /.pc-menu__item -->
+          <li class="header-menu__item"><a href="index.html">トップ</a></li><!-- /.pc-menu__item -->
+          <li class="header-menu__item"><a href="about.html">当社について</a></li><!-- /.pc-menu__item -->
+          <li class="header-menu__item"><a href="service.html">サービス</a></li><!-- /.pc-menu__item -->
+          <li class="header-menu__item"><a href="case.html">導入事例</a></li><!-- /.pc-menu__item -->
+          <li class="header-menu__item"><a href="news.html">お知らせ</a></li><!-- /.pc-menu__item -->
           <li class="header-menu__download">
-            <%- include('../parts/_btn',{text:'無料ダウンロード', link:''}) %>
+            <%- include('../parts/_btn',{text:'無料ダウンロード', link:'download.html'}) %>
           </li><!-- /.header-menu__download -->
           <li class="header-menu__contact">
-            <%- include('../parts/_btn-blue',{text:'無料ダウンロード', link:''}) %>
+            <%- include('../parts/_btn-blue',{text:'お問い合わせ', link:'contact.html'}) %>
           </li><!-- /.header-menu__download -->
         </ul><!-- /.pc-menu__items -->
 
