--- a/src/ejs/parts/_case-block.ejs
+++ b/src/ejs/parts/_case-block.ejs
@@ -58,7 +58,9 @@
               </div><!-- /.case-block__body -->
               <div class="case-block__footer">
                 <div class="case-block__category"><%- caseList.category %></div><!-- /.case-block__category -->
-                <div class="case-block__link"></div><!-- /.case-block__link -->
+                <div class="case-block__arrow">
+                  <img src="./images/common/arrow.png" alt="矢印">
+                </div><!-- /.case-block__link -->
               </div><!-- /.case-block__footer -->
             </a>
           </article>
