--- a/src/ejs/common/_head.ejs
+++ b/src/ejs/common/_head.ejs
@@ -23,6 +23,9 @@
    <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@1,500&family=Noto+Sans+JP:wght@500;700&display=swap" rel="stylesheet">   
   <!-- css -->
   <link rel="stylesheet" href="./css/styles.css" />
+  <!-- swiper -->
+<link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css"/>
+<script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
   <!-- JavaScript -->
   <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
   <script defer src="./js/script.js"></script>
