--- a/src/ejs/index.ejs
+++ b/src/ejs/index.ejs
@@ -81,13 +81,10 @@
   </section><!-- /.top-news -->
 
 
-
-
-  
-  
-  
 <!-- ダウンロード・コンタクト -->
+<section class="download-contact">
   <%- include('./common/_footer-top') %>
+</section><!-- /.download-contact -->
 
   <!-- フッター -->
   <%- include('./common/_footer') %>
