--- a/src/sass/module/_case-block.scss
+++ b/src/sass/module/_case-block.scss
@@ -15,8 +15,10 @@
   grid-gap:  rem(70);
  }
 }
-.case-block__item{
-
+.case-block__item:hover{
+  .case-block__figure img {
+    transform:translate(-50%, -50%) scale(1.5);
+  }
 }
 .case-block__header{
   width: 100%;
@@ -24,16 +26,17 @@
 .case-block__figure{
   width: 100%;
   position: relative;
+  overflow: hidden;
 }
  
-  .case-block__img::before {
+  .case-block__figure::before {
     padding-top: calc(251 / 335) * 100%; //画像縦 / 横
     display: block;
     content: "";
   
   }
   
-  .case-block__img img {
+  .case-block__figure img {
     position: absolute;
     top: 50%;
     left: 50%;
@@ -42,6 +45,7 @@
     object-position: center;
     width: 100%;
     height: 100%;
+    transition: all .3s;
   }
 .case-block__body{
   padding-top: rem(12);
@@ -57,6 +61,7 @@
   margin-top: rem(12);
   display: flex;
   justify-content: space-between;
+  position: relative;
 }
 .case-block__category{
   display: inline-block;
@@ -76,17 +81,9 @@
   position: relative;
 }
 
-.case-block__link:after{
-  content: "";
-  display: block;
-  width: 10px;
-  height: 10px;
-  margin: 0 10px;
-  border-top: 3px solid $white;
-  border-right: 3px solid $white;
-  transform: translate(-50%, -50%) rotate(45deg);
-  position: absolute;
-  top: 50%;
-  left: 0;
-  
+.case-block__arrow{
+  width: rem(29);
+  height: rem(29);
 }
+
+
