--- a/src/sass/page/_top-mv.scss
+++ b/src/sass/page/_top-mv.scss
@@ -17,7 +17,8 @@
   width: calc(335 / 375) * 100%;
   height: 100%;
   margin-left: auto;
-
+  
+ 
   @include mq(tab) {
    width: 93%; 
   }
@@ -27,13 +28,14 @@
   width: 100%;
   height: 100%;
   object-fit: cover;
-
+  
 } 
 
 .top-mv__body{
  position: absolute;
  left: calc(20 / 375) * 100%;
  bottom: rem(20);
+ z-index: 10;
  
  @include mq(tab) {
    bottom: rem(60);
