--- a/src/sass/global/_setting.scss
+++ b/src/sass/global/_setting.scss
@@ -50,6 +50,7 @@ $color-main-dark :  #002a52;
 $color-main-dark2 :  #023E78;
 $color-main-dark3 :  #0052A2;
 $color-back :  #EDF3F8;
+$color-line :  #E8EAEC;
 $color-main-light :  #EEF3F8;
 $color-accent : #FEF251;
 $color-accent2  :  #D33365;
