--- a/src/sass/module/_sub-about-top.scss
+++ b/src/sass/module/_sub-about-top.scss
@@ -2,6 +2,11 @@
 
 .sub-about-top{
   padding-bottom: rem(60);
+  
+  @include mq(tab) {
+    padding-bottom: rem(120);
+    
+  }
 }
 
 .sub-about-top__header{
@@ -13,6 +18,11 @@
   top: rem(20);
   left: calc(50% - rem(167));
   z-index: 3;
+  
+  @include mq(tab) {
+    left: rem(20);
+    
+  }
 
 }
 
@@ -22,6 +32,13 @@
   position: relative;
   height: rem(281);
   z-index: -1;
+
+
+  @include mq(tab) {
+    height: rem(353);
+    margin: initial;
+    width: initial;
+  }
 }
 
   
@@ -36,7 +53,15 @@
   padding: rem(20);
   background: $white;
   margin-top: rem(-50);
-   box-shadow: 0 3px 12px;
+  box-shadow: 0 3px 12px;
+  
+  @include mq(tab) {
+    padding: rem(32) rem(40);
+    max-width: rem(688);
+    margin-left: auto;
+    margin-right: auto;
+
+   }
 
 
  }
