--- a/src/sass/module/_sub-mv.scss
+++ b/src/sass/module/_sub-mv.scss
@@ -21,6 +21,11 @@
   top: 0;
   left: 0;
   clip-path: polygon(0 0, 0% 100%, 100% 0);
+  
+  @include mq(tab) {
+    width: rem(365);
+    clip-path: polygon(0 0, 100% 0, 60% 100%, 0% 100%);
+  }
 
   
 }
@@ -43,6 +48,10 @@
   left: calc(50% - rem(167));
   line-height: 1;
   z-index: 2;
+  @include mq(tab) {
+    left: calc(50% - rem(420));
+    
+  }
 }
 .sub-mv__title--en{
   display: inline-block;
@@ -52,6 +61,10 @@
   background: $white;
   font-family: $second-font-family;
   text-transform: uppercase;
+
+  @include mq(tab) {
+    font-size: rem(60);
+  }
 }
 .sub-mv__title--jp{
   display: inline-block;
@@ -60,5 +73,9 @@
   color: $color-main-dark2;
   background: $white;
   font-weight: $bold;
+
+  @include mq(tab) {
+    font-size: rem(20);
+  }
 
 }
