--- a/src/ejs/about.ejs
+++ b/src/ejs/about.ejs
@@ -48,7 +48,7 @@
 
       <!-- 役員紹介 -->
       <div class="sub-about__staff">
-        <div class="inner">
+        <div class="inner sub-about__staff-inner">
           <%- include('./parts/_staff-intro') %>
         </div><!-- /.inner -->
       </div><!-- /.sub-about__staff -->
