--- a/src/ejs/parts/_explain.ejs
+++ b/src/ejs/parts/_explain.ejs
@@ -15,19 +15,24 @@
   </div>
   <div class="explain__block">
     <dt class="explain__header">設立</dt>
-    <dd class="explain__description">2020年1月1日</dd>       
-  </div>
-  <div class="explain__block">
-    <dt class="explain__header">資本金</dt>
-    <dd class="explain__description">1億円</dd>
+    <dd class="explain__description">2012年10月03日</dd>       
   </div>
   <div class="explain__block">
     <dt class="explain__header">所在地</dt>
-    <dd class="explain__description">東京都新宿区☓☓0-0-0</dd>
+    <dd class="explain__description">〒550-1000<br>
+      大阪市西区土佐堀9-5-5</dd>
   </div>
   <div class="explain__block">
-    <dt class="explain__header">電話番号</dt>
-    <dd class="explain__description">03-0000-00000</dd>
+    <dt class="explain__header">TEL</dt>
+    <dd class="explain__description">06-123-4567（代表）</dd>
+  </div>
+  <div class="explain__block">
+    <dt class="explain__header">FAX</dt>
+    <dd class="explain__description">06-123-4568（代表）</dd>
+  </div>
+  <div class="explain__block">
+    <dt class="explain__header">E-mail</dt>
+    <dd class="explain__description">globalstandard@example.com</dd>
   </div>
 </div><!-- /.explain__blocks -->
 </dl>
