--- a/src/ejs/parts/_sub-about-top.ejs
+++ b/src/ejs/parts/_sub-about-top.ejs
@@ -29,7 +29,7 @@
         </picture>
       </div><!-- /.sub-about-top__header -->
       <div class="sub-about-top__text-box">
-        <h3 class="suv-about-top__sub-title">文化の垣根を越えた人と人との <br class="u-sp">つながりが新しい価値を生む</h3><!-- /.suv-about-top__sub-title -->
+        <h3 class="suv-about-top__sub-title">文化の垣根を越えた<br class="u-pc">人と人との <br class="u-sp">つながりが新しい価値を生む</h3><!-- /.suv-about-top__sub-title -->
         <p class="suv-about-top__sub-text text-main">コミュニケーションスキル習得をサポートすることで一人でも多くのビジネスパーソンの視野を広げ、世界を舞台に新しい相乗効果を生む未来を創造する。文化の垣根を越えた人と人とのつながりが新しい価値を生むことを信念とする。</p><!-- /.suv-about-top__sub-title -->
       </div><!-- /.sub-about-top__text-box -->
     </section><!-- /.sub-about-top -->
