--- a/src/sass/module/_staff-intro.scss
+++ b/src/sass/module/_staff-intro.scss
@@ -18,10 +18,27 @@
     
   }
 }
+
+.staff-intro__item {
+
+  @include mq(tab) {
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: space-between;
+    
+  }
+
+}
+
 .staff-intro__item + .staff-intro__item{
   margin-top: rem(60);
 }
 
+.staff-intro__header {
+  @include mq(tab) {
+    flex:  0 0 rem(240);
+  }
+}
 
 .staff-intro__figure {
   width: 100%;
@@ -48,11 +65,21 @@
     width: 100%;
     height: 100%;
   }
+
+  .staff-intro__block {
+    margin-top: rem(20);
+   @include mq(tab) {
+     flex: 0 1 rem(408);
+     margin-top: initial;
+   }
+  }
 .staff-intro__body{
-  margin-top: rem(20);
   display: flex;
   flex-wrap: wrap;
   align-items: center;
+
+  
+
 }
 .staff-intro__position{
   font-size: rem(14);
@@ -65,11 +92,17 @@
   font-weight: $bold;
   margin-left: rem(20);
 
+ 
+
 }
 
 .staff-intro__text{
   margin-top: rem(20);
   width: 100%;
+
+  @include mq(tab) {
+    margin-top: rem(32);
+  }
 }
 .staff-intro__footer{
   margin-top: rem(20);
@@ -77,6 +110,9 @@
   display: flex;
   align-items: center;
 
+  @include mq(tab) {
+    margin-top: rem(32);
+  }
 
 }
 .staff-intro__sns{
