--- a/src/sass/module/_sub-about-top.scss
+++ b/src/sass/module/_sub-about-top.scss
@@ -1,10 +1,10 @@
 @use 'global' as * ; 
 
 .sub-about-top{
-  padding-bottom: rem(60);
+  padding-bottom: rem(56);
   
   @include mq(tab) {
-    padding-bottom: rem(120);
+    padding-bottom: rem(175);
     
   }
 }
@@ -52,15 +52,13 @@
   width: 100%;
   padding: rem(20);
   background: $white;
-  margin-top: rem(-50);
+  margin-top: rem(-40);
   box-shadow: 0 3px 12px;
   
   @include mq(tab) {
     padding: rem(32) rem(40);
     max-width: rem(688);
-    margin-left: auto;
-    margin-right: auto;
-
+    margin: rem(-58) auto;
    }
 
 
@@ -72,7 +70,16 @@
   text-align: center;
   color: $color-main-dark2;
 
+  @include mq(tab) {
+    font-size: rem(24);
+
+  }
+
 }
 .suv-about-top__sub-text{
   margin-top: rem(20);
+
+  @include mq(tab) {
+    margin-top: rem(31);
+  }
 }
