--- a/src/ejs/parts/_sub-service-top.ejs
+++ b/src/ejs/parts/_sub-service-top.ejs
@@ -1,19 +1,50 @@
 <% const serviceLists=[
   {
     img:"./images/common/top-service1.jpg" ,
-    alt:" " ,
+    alt:"ビジネス英語研修 " ,
     titleJp:"ビジネス英語研修 " ,
+    titleJpPc:"ビジネス英語研修 " ,
     titleEn:"Business English Training " ,
     text:" ビジネス英会話はこれからの時代、すべてのビジネスパーソンが学ぶべき必須スキルと考えおります。<br>海外にビジネス展開する際にはもちろんのこと、日本国内でも英会話コミュニケーションができることによってチャンスが掴める場面があります。" ,
+    text2:" 担当する講師は皆、豊富な海外ビジネス経験者であり、ティーチングスキル、コミュニケーションスキル、人間性に加えて採用後には厳しいトレーニング期間を設けているので、様々な職業や職種に合ったスキルまで身につけられます。<br>また、必要に応じてマンツーマン形式のレッスンを行うことも可能なので、時間の限り話すことができ効率よく上達することができます。。" ,
     dt:"対象 " ,
     dd:"ビジネスの中で使える英語コミュニケーション能力が必要な方 " ,
+    dt2:"費用 " ,
+    dd2:"時間内容要相談 " ,
+    
+  },
+  {
+    img:"./images/common/top-service2.jpg" ,
+    alt:"異文化コミュニケーション " ,
+    titleJp:"異文化<br>コミュニケーション " ,
+    titleJpPc:"異文化コミュニケーション " ,
+    titleEn:"Cross-cultural communication " ,
+    text:" 急速にグローバル化が進んでおり、ビジネスの場面に限らず様々な文化的背景を持つ者同士の交流はもはや日常的な光景となりました。<br>言語や文化が異なる相手を理解することで世界が広がり、新たなビジネスチャンスに巡り会うことは少なくありません。<br> 多様な価値観を尊重しながら言葉の垣根を越え、コミュニケーションの力で他者を理解しようとする「異文化コミュニケーション」はこれからの時代、さらに重要となるスキルと言えます。" ,
+    text2:" コミュニケーションの基本となる日本語と英語の力を鍛えつつ、アプローチする国の文化を同時に学び、スムーズなビジネス展開をサポートいたします。" ,
+    dt:"対象 " ,
+    dd:"海外へのビジネス展開を検討されている方 " ,
+    dt2:"費用 " ,
+    dd2:"時間内容要相談 " ,
+    
+  },
+  {
+    img:"./images/common/top-service3.jpg" ,
+    alt:"ビジネス留学プログラム " ,
+    titleJp:"ビジネス留学<br > プログラム " ,
+    titleJpPc:"ビジネス留学プログラム " ,
+    titleEn:"Business study abroad program " ,
+    text:"将来的に海外で働きたい方に向けた講座をご用意しております。一般的には3ヶ月〜1年の期間で基本的な英会話スキルと、海外でのビジネスマナー習得を目指します。<br>通常の語学留学では得られないビジネスの場で通用するコミュニケーションスキル習得に重点をおいておりますので、海外でビジネス展開する際に自信を持って活動することができるようになります。" ,
+    text2:" お申し込みいただく際に綿密なヒアリングを行い、おすすめの留学先を複数ピックアップいたします。海外ビジネス経験豊富な講師が、留学後のキャリアプラン作成までお手伝いいたします。" ,
+    dt:"対象 " ,
+    dd:"英語コミュニケーション能力を習得し、将来的に海外で働きたい方 " ,
+    dt2:"費用 " ,
+    dd2:"時間内容要相談 " ,
     
   },
  ] %>
  
 
  <div class="sub-service-top">
-   <div class="inner">
      <div class="sub-service-top__items">
           <% for (var serviceList of serviceLists) {%>
           <div class="sub-service-top__item">
@@ -24,26 +55,31 @@
             </div><!-- /.sub-service-top__head -->
             <div class="sub-service-top__body">
               <div class="sub-service-top__title">
-                <h2 class="sub-service-top__title-jp" ><%= serviceList.titleJp %></h2>
+                <h2 class="sub-service-top__title-jp u-sp" ><%- serviceList.titleJp %></h2>
+                <h2 class="sub-service-top__title-jp u-pc" ><%- serviceList.titleJpPc %></h2>
                 <small class="sub-service-top__title-en" ><%= serviceList.titleEn %></small>
               </div><!-- /.sub-service-top__title -->
                <div class="sub-service-top__text-box">
-                 <p class="sub-service-top__text"><%- serviceList.text %></p><!-- /.sub-service-top__text -->
+                 <p class="sub-service-top__text text-main"><%- serviceList.text %></p><!-- /.sub-service-top__text -->
+                 <p class="sub-service-top__text text-main"><%- serviceList.text2 %></p><!-- /.sub-service-top__text -->
                </div><!-- /.sub-service-top__text-box -->
                <dl class="sub-service-top__footer">
                   <div class="sub-service-top__footer-item">
-                    <dt class="sub-service-top__dt"><%= serviceList.dt %></dt><!-- /.sub-service-top__dt -->
-                    <dd class="sub-service-top__dd"><%= serviceList.dd %></dd><!-- /.sub-service-top__dd -->
+                    <dt class="sub-service-top__dt text-main"><%= serviceList.dt %></dt><!-- /.sub-service-top__dt -->
+                    <dd class="sub-service-top__dd text-main"><%= serviceList.dd %></dd><!-- /.sub-service-top__dd -->
+                  </div><!-- /.sub-service-top__footer-item -->
+                  <div class="sub-service-top__footer-item">
+                    <dt class="sub-service-top__dt text-main"><%= serviceList.dt2 %></dt><!-- /.sub-service-top__dt -->
+                    <dd class="sub-service-top__dd text-main"><%= serviceList.dd2 %></dd><!-- /.sub-service-top__dd -->
                   </div><!-- /.sub-service-top__footer-item -->
                </dl><!-- /.sub-service-top__footer -->
                <div class="sub-service-top__btn">
-                <%- include('../parts/_btn-arrow',{text:'無料ダウンロード',link:'#'}) %>
+                <%- include('../parts/_btn-arrow',{text:'お申し込みはこちら',link:'#'}) %>
                </div><!-- /.sub-service-top__btn -->
             </div><!-- /.sub-service-top__body -->
           </div><!-- /.sib-service-top__item -->
           <% } %>
         </div><!-- /.sub-service-top__items -->
-      </div><!-- /.inner -->
     </div><!-- /.sub-service-top -->
     
 
