--- a/src/sass/global/_setting.scss
+++ b/src/sass/global/_setting.scss
@@ -54,6 +54,7 @@ $color-line :  #E8EAEC;
 $color-main-light :  #EEF3F8;
 $color-accent : #FEF251;
 $color-accent2  :  #D33365;
+$color-caution  :  #E61264;
 
 body {
   color: $black;
