--- a/src/ejs/service.ejs
+++ b/src/ejs/service.ejs
@@ -15,7 +15,7 @@
   }) %>
   
   <!-- パンくず -->
-  <div class="sub-about">
+  <div class="sub-service">
     <div class="inner">
       <div class="sub-about__breadcrumb">
         <%- include('./common/_breadcrumb', {
@@ -33,8 +33,29 @@
       </div><!-- /.inner -->
     </div><!-- /.sub-about__breadcrumb -->
       
+    <section class="sub-service__top">
+      <div class="inner">
+        <h2 class="sub-service__top-title">世界で活躍できる<br> グローバルな人材を育てる<br class="u-sp">３つの研修プログラム</h2><!-- /.sub-service__top-title -->
+        <div class="sub-service__top-body">
+          <%- include('./parts/_sub-service-top') %>
+        </div><!-- /.sub-service__top-body -->
+      </div><!-- /.inner -->
+    </section><!-- /.sub-service__top -->
+   
+    <section class="sub-service__flow">
+      <div class="inner">
+        <%- include('./parts/_sub-service-flow') %>
+      </div><!-- /.inner -->
+    </section><!-- /.sub-service__top -->
 
-    <%- include('./parts/_sub-service-top') %>
+    <section class="sub-service__qa">
+      <div class="inner">
+        <h2 class="sub-service__qa-title">よくある質問</h2><!-- /.sub-service__qa-title -->
+        <div class="sub-service__qa-block">
+          <%- include('./parts/_sub-service-qa') %>
+        </div><!-- /.sub-service__qa-block -->
+      </div><!-- /.inner -->
+    </section><!-- /.sub-service__top -->
    
    
 
@@ -45,21 +66,6 @@
 
 <!-- フッター -->
 <%- include('./common/_footer') %>
-
-
-
-<div class="margin"></div><!-- /.margin -->
-  
-  <%- include('./parts/_btn',{text:' ダウンロード', link:'#'}) %>
-  <%- include('./parts/_btn-blue',{text:'無料ダウンロード',link:'#'}) %>
-  <%- include('./parts/_btn-arrow',{text:'無料ダウンロード',link:'#'}) %>
-  <%- include('./parts/_btn-yellow',{text:'無料ダウンロード',link:'#'}) %>
-  <%- include('./parts/_view-more',{text:'view-more',link:'#'}) %>
-  <%- include('./parts/_view-more--black',{text:'view-more',link:'#'}) %>
-  <%- include('./parts/_section-title',{title:'about us',text:'私たちについて'}) %>
-  <%- include('./parts/_section-title--white',{title:'about us',text:'私たちについて'}) %>
-  <%- include('./parts/_section-title--small',{title:'about us',text:'私たちについて'}) %>
-  
   
   </body>
 </html>
