--- a/src/ejs/parts/_explain.ejs
+++ b/src/ejs/parts/_explain.ejs
@@ -1,5 +1,5 @@
 <dl class="explain">
-  <h2 class="explain__title sub-title">会社概要</h2><!-- /.explain__title -->
+  <h2 class="explain__title sub-news-title">会社概要</h2><!-- /.explain__title -->
   <div class="explain__blocks">
     <div class="explain__block">
       <dt class="explain__header">代表</dt>
