--- a/src/ejs/service.ejs
+++ b/src/ejs/service.ejs
@@ -17,7 +17,7 @@
   <!-- パンくず -->
   <div class="sub-service">
     <div class="inner">
-      <div class="sub-about__breadcrumb">
+      <div class="sub-service__breadcrumb sub-breadcrumb">
         <%- include('./common/_breadcrumb', {
           navigationList: [
           {
@@ -25,7 +25,7 @@
             label: 'ホーム'
           },
           {
-            path: ' リンクパス ',
+            path: '  ',
             label: 'サービス'
           }
           ]
