--- a/src/sass/module/_card.scss
+++ b/src/sass/module/_card.scss
@@ -18,7 +18,7 @@
 
 
 .card a:hover {
-  .p-news-card-long__figure img {
+  .card__figure img {
     transform: scale(1.3) translate(-40%, -40%);
     
   }
@@ -77,6 +77,12 @@
 
 .card__body {
   margin-left: rem(12);
+
+  @include mq(tab) {
+    margin-left: rem(20);
+    padding-top: rem(13);
+
+  }
 }
 
 .card__meta {
@@ -92,6 +98,12 @@
   line-height: 1;
   border: 1px solid $color-accent2;
   color: $color-accent2;
+  
+  @include mq(tab) {
+    font-size: rem(14);
+    padding: rem(8) rem(24);
+
+  }
 
 }
 
@@ -110,9 +122,70 @@ line-height: 1.4286;
 margin-top: rem(6);
 
 @include mq(tab) {
-  font-size: rem(14);
+  font-size: rem(16);
+  line-height: 1.75;
+  margin-top: rem(16);
+
 }
 }
+
+
+
+
+
+
+
+.card__header.card__header--aside {
+  @include mq(tab) {
+    flex: 0 0 rem(100);
+  
+  }
+}
+
+.card__figure.card__figure--aside::before {
+  @include mq(tab) {
+    padding-top:  calc(100 / 100 ) * 100%; //画像縦 / 横
+    
+  }
+  
+}
+
+.card__body.card__body--aside {
+
+  @include mq(tab) {
+    margin-left: rem(10);
+    padding: 0;
+
+  }
+}
+
+
+.card__category.card__category--aside {
+  @include mq(tab) {
+    font-size: rem(12);
+    padding: rem(5) rem(12);
+
+  }
+
+}
+
+
+
+.card__title.card__title--aside{
+font-size: rem(14);
+font-weight: $bold;
+line-height: 1.4286;
+margin-top: rem(6);
+
+@include mq(tab) {
+  margin-top: rem(8);
+
+}
+}
+
+
+
+
 
 
 
