--- a/src/sass/module/_sub-about-top.scss
+++ b/src/sass/module/_sub-about-top.scss
@@ -53,7 +53,7 @@
   padding: rem(20);
   background: $white;
   margin-top: rem(-40);
-  box-shadow: 0 3px 12px;
+  box-shadow: 0 3px 12px rgba($color: #000000, $alpha: 0.16);
   
   @include mq(tab) {
     padding: rem(32) rem(40);
