--- a/src/sass/module/_sub-service-top.scss
+++ b/src/sass/module/_sub-service-top.scss
@@ -115,7 +115,7 @@
 
 .sub-service-top__body{
   background: rgba($color: $white, $alpha: 0.9);
-  box-shadow: 0 3px 12px #000000;
+  box-shadow: 0 3px 12px rgba($color: #000000, $alpha: 0.16);
   padding: rem(44) rem(20);
   margin-top: rem(-150);
   position: relative;
